--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "current-device": "^0.7.8",
     "gsap": "^2.0.1",
+    "intersection-observer": "^0.5.0",
     "register-service-worker": "^1.0.0",
     "stylus-mixins": "https://github.com/glebmachine/stylus-mixins",
     "svgxuse": "^1.2.6",
+    "validator": "^10.4.0",
     "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
     "vue-observe-visibility": "^0.4.1",
