--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "vue-blank",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "Vue projects kick-starter",
   "author": "Sergei Kornienko <qluqua@gmail.com>",
   "private": true,
   "scripts": {
-    "start": "yarn svg-sprite && vue-cli-service serve",
-    "serve": "yarn svg-sprite && vue-cli-service serve",
-    "serve-prd": "yarn svg-sprite && vue-cli-service serve --mode production",
-    "build": "yarn svg-sprite && vue-cli-service build --dest www && ln -s www dist",
     "svg-sprite": "svg-sprite --symbol --symbol-dest=public/static/images --symbol-sprite=sprite.svg src/assets/images/svg/*.svg",
+    "swagger": "gulp swagger",
+    "prestart": "yarn svg-sprite && yarn swagger",
+    "start": "yarn prestart && vue-cli-service serve",
+    "serve": "yarn prestart && vue-cli-service serve",
+    "serve-prd": "yarn prestart && vue-cli-service serve --mode production",
+    "build": "yarn prestart && vue-cli-service build --dest www && ln -s www dist",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e"
@@ -18,6 +20,7 @@
     "current-device": "^0.7.8",
     "gsap": "^2.0.1",
     "intersection-observer": "^0.5.0",
+    "portable-fetch": "^3.0.0",
     "register-service-worker": "^1.0.0",
     "stylus-mixins": "https://github.com/glebmachine/stylus-mixins",
     "svgxuse": "^1.2.6",
@@ -42,11 +45,18 @@
     "@vue/test-utils": "^1.0.0-beta.16",
     "bemto.pug": "^2.1.0",
     "chai": "^4.1.2",
+    "dotenv": "^6.0.0",
+    "gulp": "^3.9.1",
+    "gulp-exec": "^3.0.2",
+    "gulp-json-editor": "^2.4.2",
+    "gulp-rename": "^1.4.0",
+    "gulp-yaml": "^2.0.1",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "svg-sprite": "^1.4.0",
+    "swagger-codegen": "^0.1.1",
     "vue-template-compiler": "^2.5.16"
   }
 }
