--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "@sentry/browser": "^4.0.0-beta.12",
     "current-device": "^0.7.8",
     "gsap": "^2.0.1",
     "intersection-observer": "^0.5.0",
